--- a/etc/rsnapshot/vault.conf
+++ b/etc/rsnapshot/vault.conf
@@ -4,7 +4,7 @@
 
 config_version		1.2
 
-include_conf		rsync_disk
+include_conf		etc/rsnapshot/rsync_disk
 
 snapshot_root		/Volumes/vault/rsnapshots/
 lockfile		/Volumes/vault/rsnapshots/running.pid
@@ -12,6 +12,7 @@ lockfile		/Volumes/vault/rsnapshots/running.pid
 # backup home directory
 backup			/Users/mfrancis/		mfrancis/
 ; exclude_file		/Users/mfrancis/etc/rsnapshot/vault.exclude
+
 
 interval		daily				20
 interval		weekly				52
