git: add more things to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
 .DS_Store
+.Trash
+.ssh
+.MacOSX
+.junglediskinstance
+
 etc/bash/saved_history
+
 Library/Keychains
+Library/Caches
+Library/Calendars
+Library/Cookies/
+Library/Favorites/
+Library/FontCollections/
+Library/Fonts/
+Library/Input Methods/
+Library/LaunchAgents/
+Library/Logs/
+Library/Mail/
+Library/PDF Services/
+Library/PubSub/
+Library/Recent Servers/
+Library/Safari/
+Library/StickiesDatabase
+Library/Workflows/
+
+Applications/
+Desktop/
+Documents/
+Downloads/
+Movies/
+Music/
+Pictures/
+Projects/
+Public/
+Sites/
+Sources/
