git: Neaten the .gitconfig file.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,20 +1,24 @@
 [github]
-	user = norm
+	user  = norm
 	token = REPLACE_ME_WITH_TOKEN
+
 [user]
 	email = norm@cackhanded.net
-	name = Mark Norman Francis
+	name  = Mark Norman Francis
+
 [color]
 	status = auto
-	diff = auto
+	diff   = auto
 	branch = auto
+
 [merge]
 	tool = opendiff
+
 [alias]
-	co = checkout
 	br = branch
-	ci = commit
-	s  = status
+	co = checkout
 	d  = diff
-[core]
-	excludesfile = /Users/norm/.gitignore
+	dc = diff --cached
+	p  = push
+	s  = status
+
