pkgsrc: Add more packages.

--- a/etc/pkgsrc/pkg_chk.conf
+++ b/etc/pkgsrc/pkg_chk.conf
@@ -3,9 +3,11 @@
 
 LAPTOP = sinister
 DEV    = LAPTOP
+STORE  = southpaw
 DARWIN = sinister
 NETBSD = cowpaw
 LINUX  = buckfist
+WEB    = cowpaw sinister
 
 # required to be installed first
 pkgtools/pkg_chk                    *
@@ -43,3 +45,11 @@ textproc/p5-Text-Template           *
 www/p5-URI                          *
 www/p5-FCGI                         *
 devel/p5-Cache-FastMmap             *
+
+# text manipulation in images
+graphics/p5-GD                      WEB
+
+# file storage
+news/hellanzb                       STORE
+archivers/par2                      STORE
+archivers/unrar                     STORE
