bash: Update usage of pkgsrc, including new function to start from scratch.

--- a/etc/mk.conf
+++ b/etc/mk.conf
@@ -1,20 +1,27 @@
-# NetBSD/pkgsrc mk.conf
+# ~/etc/mk.conf -- local additions to mk.conf
 # -*- Mode: Bash; tab-width: 4; indent-tabs-mode: nil; -*-
 
-BSDSRCDIR?=/usr/src
-OBJHOME?=  /var/obj
-WRKOBJDIR?=${OBJHOME}/pkg
+BSDSRCDIR?=     /usr/src
+OBJHOME?=       /var/obj
+WRKOBJDIR?=     ${OBJHOME}/pkg
 
 
 .ifdef BSD_PKG_MK
 
-    LOCALBASE=/ports
-      VARBASE=${LOCALBASE}/var
-    PKGSRCDIR=${LOCALBASE}/src
-PKG_TOOLS_BIN=${LOCALBASE}/sbin
-  PKGCHK_CONF=${PKGSRCDIR}/local/pkg_chk.conf
-    PKG_DBDIR=/var/db/pkgsrc
-    FETCH_CMD=/usr/bin/ftp
+OBJHOME=        ${LOCALBASE}/var/obj
+PKGSRCDIR=      ${LOCALBASE}/src
+LOCALPKGSRC=    ${PKGSRCDIR}/local
+LOCALPATCHES=   ${LOCALPKGSRC}/patches
+# PKGCHK_CONF=    ${LOCALPKGSRC}/pkg_chk.conf
+
+.if exists( ${LOCALBASE}/bin/sudo )
+    SU_CMD=     ${LOCALBASE}/bin/sudo /bin/sh -c
+.endif
+.if exists( /usr/bin/sudo )
+    SU_CMD=     /usr/bin/sudo /bin/sh -c
+.endif
+
+PKG_RCD_SCRIPTS=YES
 
 CREATE_WRKDIR_SYMLINK=yes
         UPDATE_TARGET=package-install
@@ -24,11 +31,11 @@ ACCEPTABLE_LICENSES+= \
         no-commercial-use
 
 # use /etc rather than /ports/etc for:
-PKG_USE_ETC+= \
-        mail/exim          \
-        mail/dovecot       \
-        security/sudo      \
-        mail/procmail
+# PKG_USE_ETC+= \
+#         mail/exim          \
+#         mail/dovecot       \
+#         security/sudo      \
+#         mail/procmail
 
 # mail settings
 PKG_OPTIONS.exim+=exim-auth-dovecot
@@ -38,7 +45,9 @@ PKG_OPTIONS.exim+=exim-auth-dovecot
     DOVECOT_GROUP=mail
 
 # web settings
-PKG_OPTIONS.lighttpd+=lua
-     PKG_OPTIONS.php+=fastcgi
+PKG_OPTIONS.lighttpd += lua
+PKG_OPTIONS.django   += mysql
+PKG_OPTIONS.django   += sqlite
+PKG_OPTIONS.php      += fastcgi
 
 .endif
