pkgsrc: Update required packages.

--- a/etc/pkg_chk.conf
+++ b/etc/pkg_chk.conf
@@ -2,11 +2,12 @@
 # -*- Mode: Bash; tab-width: 4; indent-tabs-mode: nil; -*-
 
 LAPTOP = sinister
-DEV    = LAPTOP
+DEV    = sinister
 STORE  = southpaw
-DARWIN = sinister
+DARWIN = sinister southpaw
 NETBSD = cowpaw
-LINUX  = buckfist
+UBUNTU = hidari kushoto venstre
+EC2    = levsha
 WEB    = cowpaw sinister
 
 # required to be installed first
@@ -26,12 +27,18 @@ net/rsync                           *
 sysutils/rsnapshot                  *
 misc/less                           *
 devel/scmgit                        *
+local/p5-ack                        *
+local/ec2-api-tools                 DEV
+local/lesspipe                      *
 
 # programming aides
+local/p5-Modern-Perl                DEV
 devel/p5-Perl-Tidy                  DEV
 devel/p5-Module-Starter             DEV
 devel/p5-Module-Starter-PBP         DEV
 devel/p5-Test-Perl-Critic           DEV
+pkgtools/url2pkg                    DEV
+pkgtools/pkglint                    DEV
 
 # other required perl modules 
 devel/p5-Readonly                   *
@@ -45,9 +52,12 @@ textproc/p5-Text-Template           *
 www/p5-URI                          *
 www/p5-FCGI                         *
 devel/p5-Cache-FastMmap             *
+devel/p5-Date-Manip                 *
+converters/p5-JSON-Any              *
 
 # text manipulation in images
 graphics/p5-GD                      WEB
+local/p5-Flourish                   WEB
 
 # file storage
 news/hellanzb                       STORE
