pkgsrc: Add dependencies on lighttpd and php/pear for machines providing web pages.

--- a/etc/pkg_chk.conf
+++ b/etc/pkg_chk.conf
@@ -17,6 +17,8 @@ devel/cpuflags                      * -DARWIN
 # languages
 lang/perl5                          *
 lang/python25                       *
+lang/php5                           WEB
+lang/pear                           WEB
 
 # shell enhancements
 shells/bash-completion              *
@@ -63,3 +65,7 @@ local/p5-Flourish                   WEB
 news/hellanzb                       STORE
 archivers/par2                      STORE
 archivers/unrar                     STORE
+
+# services
+www/lighttpd                        WEB
+
