--- a/etc/git/config
+++ b/etc/git/config
@@ -24,9 +24,22 @@
     changed = magenta
     untracked = cyan
 
+[diff]
+    tool = Kaleidoscope
+
+[difftool "Kaleidoscope"]
+    cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
+
 [merge]
     ff      = only
-    tool    = opendiff
+    tool    = Kaleidoscope
+
+[mergetool]
+    prompt = false
+
+[mergetool "Kaleidoscope"]
+    cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+    trustExitCode = true
 
 [alias]
     b       = branch
